--- a/letour.html
+++ b/letour.html
@@ -70,7 +70,7 @@
           <div class="spacer2"> </div>
           <div class="spacer2"> </div>
             <center>
-            <img src="images/yunus & us.jpg" width="400" align="middle">
+            <img src="images/Yunus.jpg" width="400" align="middle">
 
           <div class="legend">
             <p> A Vienne, avec le Professeur Yunus </p>
@@ -137,7 +137,7 @@
           <div class="spacer2"> </div>
           <div class="spacer2"> </div>
             <center>
-            <img src="images/Meloto & Tricoire & us.jpg" width="400" align="middle">
+            <img src="images/Meloto.jpg" width="400" align="middle">
 
           <div class="legend">
             <p> A l'Universété d'été du MEDEF 2014 <br> avec Antonio Meloto, Fondateur de Gawad Kalinga, <br> et Jean-Pascal Tricoire, CEO de Schneider Electric, <br> pour la signature du contrat de partenariat </p>
@@ -171,7 +171,7 @@
           <div class="spacer2"> </div>
           <div class="spacer2"> </div>
             <center>
-            <img src="images/enfant.jpg" width="400" align="middle">
+            <img src="images/enfant.JPG" width="400" align="middle">
 
           <div class="legend">
             <p> Un écolier bénéficiaire du programme Lemateki </p>
