--- a/letour.html
+++ b/letour.html
@@ -154,7 +154,7 @@
           <div class="spacer2"> </div>
           <div class="spacer2"> </div>
             <center>
-            <img src="images/DSC08895.jpg" width="400" align="middle">
+            <img src="images/inde.jpg" width="400" align="middle">
 
           <div class="legend">
             <p> Avec des producteurs fournisseurs d'I Say Organic </p>
