--- a/etmaintenant.html
+++ b/etmaintenant.html
@@ -68,6 +68,9 @@
           <BR> <BR> Rencontres avec des personnalités inspirantes (entrepreneurs, chefs d’entreprises, philosophes, politiques…) œuvrant à leur échelle pour améliorer le monde, immersions terrains, coaching, jeux pédagogiques, mises en action physiques, ateliers d'introspection, cours théoriques, mises en application, conférences, brainstormings, réalisations créatives, mentoring, échanges... : nous avons voulu leur faire fait vivre les 10 jours les plus intenses intellectuellement, émotionnellement et physiquement de leur vie !
           </p>
 
+          <p> En savoir plus sur le Ticket for Change via cette vidéo-bilan :</p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/oPMRRcr3xho" frameborder="0" allowfullscreen></iframe>
+
           <h2> Corporate for Change </h2>
           
           <p> 
