--- a/etmaintenant.html
+++ b/etmaintenant.html
@@ -69,15 +69,22 @@
           </p>
 
           <p> En savoir plus sur le Ticket for Change via cette vidéo-bilan :</p>
+
           <iframe width="560" height="315" src="https://www.youtube.com/embed/oPMRRcr3xho" frameborder="0" allowfullscreen></iframe>
 
           <h2> Corporate for Change </h2>
           
           <p> 
+          Nous vivons une époque passionnante.
+          <BR> <BR> Les défis devant nous sont colossaux : réchauffement climatique, exclusion sociale, désengagement et mal-être au travail... pour ne citer qu'eux.
+          <BR> <BR> Au même moment, nous n'avons jamais eu autant de savoirs et de ressources à notre disposition pour adresser ces défis, à condition qu'ils soient bien utilisés. Plus que jamais, les entreprises ont un rôle à jouer :
+          <BR> <BR> > Comment les entreprises peuvent-elles générer des externalités positives sur la société et l'environnement tout en renforçant leur compétitivité sur le long terme ?
+          <BR> <BR> > Comment réinventer de nouveaux espaces d’échange et de collaboration entre les grandes entreprises, les startups, le monde associatif, et la société civile ?  
+          <BR> <BR> > Comment repenser l'organisation d'une entreprise pour diffuser le bonheur au travail ? 
+          Ces questions sont au coeur de notre action au sein de Corporate for Change. 
+          <BR> <BR> Avec Corporate for Change, nous proposons des programmes créatifs, optimistes et pragmatiques pour aider des entreprises à se réinventer. Nous nous focalisons sur l’activation des talents de leurs collaborateurs, par la conception et l’organisation d’expériences de vie transformatrices, au contact des pionniers, experts et communautés de notre écosystème.
+          <BR> <BR> Nos programmes s’adressent aussi bien à des dirigeants qui testent de nouveaux réglages pour réconcilier économique et social qu’à des intrapreneurs qui initient ou souhaitent initier des projets pour transformer leur entreprise de l’intérieur, quel que soit leur niveau hiérarchique.
           Nous croyons fortement à la complémentarité d’approche entre entreprises pionnières, entreprises en questionnement et jeunes entrepreneurs engagés. La fertilisation entre ces communautés a été largement plébiscitée lors du Tour Ticket for Change 2014.
-          <BR> <BR> Nous croyons à la force des connexions avec des innovateurs de renom, des mentors expérimentés, mais aussi des jeunes entrepreneurs en chemin, pour insuffler cet esprit de fraicheur et d’innovation dans les grandes organisations.
-          <BR> <BR> Avec Corporate for Change, nous proposons des programmes créatifs, optimistes et pragmatiques pour aider des entreprises à se réinventer. Nous nous focalisons sur l’activation des talents de leurs collaborateurs, par la conception et l’organisation d’expériences de vie transformatrices, au contact des pionniers, experts et communautés qui gravitent autour de Ticket for Change.
-          <BR> <BR> Ensemble, explorons les nouvelles formes de leadership du XXIeme siècle !
           </p>
 
         <h3> Les Suricates </h3>
@@ -89,7 +96,14 @@
           <BR> <BR> C’est la mission des suricates : donner envie de soutenir ces projets, simplement, et chacun à son échelle.
           </p> 
 
+          <div class="spacer2"> </div>
+          <div class="spacer2"> </div>
+            <center>
+            <img src="images/Suricates.png" width="600" align="middle">
+            </center>
 
+          <div class="spacer2"> </div>
+          <div class="spacer2"> </div>
 
           </div>
 
