--- a/citations.html
+++ b/citations.html
@@ -115,6 +115,15 @@
       </p>
       </div>
 
+       <div class="spacer2"> </div>
+          <div class="spacer2"> </div>
+            <center>
+            <img src="images/sac.jpg" width="600" align="middle">
+            </center>
+
+          <div class="spacer2"> </div>
+          <div class="spacer2"> </div>
+
     </div>
 
 
