--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
               <a href="letour.html"> Le Tour </a>
             </li>
             <li>
-              <a href="citations.html"> Citations </a>
+              <a href="ressources.html"> Livres et outils </a>
             </li>
             <li>
-              <a href="ressources.html"> Ressources </a>
+              <a href="citations.html"> Citations </a>
             </li>
             <li>
               <a href="etmaintenant.html"> Et maintenant ? </a>
@@ -67,7 +67,11 @@
 
 </div>
 
-<div class="spacer"> </div>
+<div class="spacer2"> </div>
+<div class="spacer2"> </div>
+<div class="spacer2"> </div>
+<div class="spacer2"> </div>
+<div class="spacer2"> </div>
 
     <div class="container">
       <div class="row">
