--- a/letour.html
+++ b/letour.html
@@ -23,7 +23,7 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-default navbar-transparent navbar-fixed-top" role="navigation">
+           <nav class="navbar navbar-default navbar-transparent navbar-fixed-top" role="navigation">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -45,10 +45,10 @@
               <a href="letour.html"> Le Tour </a>
             </li>
             <li>
-              <a href="citations.html"> Citations </a>
+              <a href="ressources.html"> Livres et outils </a>
             </li>
             <li>
-              <a href="ressources.html"> Ressources </a>
+              <a href="citations.html"> Citations </a>
             </li>
             <li>
               <a href="etmaintenant.html"> Et maintenant ? </a>
@@ -60,6 +60,8 @@
 
 
         <div class="letour" align="justify">
+
+        <div class="spacer2"> </div>
         
         <h1> Qui sommes-nous ? </h1>
 
